# Projects

Computational Statistics/: 2_1.R  2_2 haoran lei.R  2_2_c.R  2_3.R  solutions to 2.1, 2.2 and 2.3.docx
H1-NMR coupling inferecing software/: About.pptx  How to use H1-NMR Deconvolutor (v1.01) en .docx  README.txt  input examples.txt
H1-NMR coupling inferecing software/Project folder/: H1-NMR.depend  main.cpp  resource.h  resource.rc  win32_test.cbp  win32_test.depend  win32_test.layout
H1-NMR coupling inferecing software/data/: H1-NMR.lnk  H1-NMR.pptx  code3.txt  source code 3.txt  source code.txt  source code2.txt  新建 Microsoft Word 文档.docx  最后代码.txt  最后代码2.txt  源代码3.txt  源代码3’‘.txt  源代码4.txt
H1-NMR coupling inferecing software/old project/H1NMR/: H1NMR.sln  H1NMR.vcxproj  H1NMR.vcxproj.filters  project.cpp
H1-NMR coupling inferecing software/old project/H1NMR/Debug/: CodeAnalysisResultManifest.txt
H1-NMR coupling inferecing software/project/H1NMR/: resource.h
H1-NMR coupling inferecing software/project/H1NMR/Debug/: vc142.idb
Leetcode/: Leetcode.sln
Leetcode/Debug/: Leetcode.ilk
Leetcode/Leetcode/: Leetcode.vcxproj  template.cpp
Leetcode/Leetcode/Debug/: Leetcode.exe.recipe  vc142.idb
Leetcode/Leetcode/Debug/Leetcode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Leetcode.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Machine learning/Hand writing identification/clustering algorithms/: README.txt  exploration.py  kmeans.py  peter-hierarchical.py
Machine learning/Hand writing identification/clustering algorithms/__MACOSX/: ._digits-raw.csv
Machine learning/Hand writing identification/hw5/: evaluation & analysis.docx  hierarchical.py  kmeans_analysis.py
Machine learning/Predicting dating decision/Decision Trees, Bagging and Random Forests/: README.txt  average_labels.csv  bootstrap_set.csv  dating2.csv  trainingSet.csv  trees.py
Machine learning/Predicting dating decision/LR and SVM/: cv.py  dating-binned-hw2.csv  lr_svm 2.py  lr_svm.py  preprocess-assg3.py
Machine learning/Predicting dating decision/Naive Bayes/2020F-CS573-HW2/: 123.csv  5_1 - 副本.py  5_1 - 副本2.py
Machine learning/Predicting dating decision/hw2/: 11.xlsx
Machine learning/Predicting dating decision/hw2/2020F-CS573-HW2/: 123.xlsx  dating-binned.csv  dating.csv  out.csv
Machine learning/Predicting dating decision/hw3/: README.txt  SVM_predicted_labels_test.csv  SVM_predicted_labels_train.csv  dating.csv  output.docx  predicted_labels_train.csv  testSet.csv  test_labels.csv  trainingSet.csv
Machine learning/Predicting dating decision/hw4/: a.csv  b.csv  cv_depth.py  cv_frac.py  cv_numtrees.py  dating.csv  evaluation & analysis.docx  preprocess-assg4.py  testSet.csv
Machine learning/Predicting gender using Tinder profile/: Predicting Tinder Gender.docx
Machine learning/Predicting gender using Tinder profile/colab_notebooks-20201217T063810Z-001/: Forest.ipynb  Kmeans.py  NB.ipynb  clstm.ipynb  fc_nn.ipynb  logisticRegression.ipynb  lstm.ipynb  preprocess.ipynb  test_nn.ipynb
RPG Maker related/Project1/: Game.ini  更新进度.txt  计划.docx  设定集.pptx
RPG Maker related/Project1/Data/: Actors.rxdata  Items.rxdata  Map001.rxdata  Map002.rxdata  Map003.rxdata  Map004.rxdata  Map005.rxdata  Map006.rxdata  Map007.rxdata  Map033.rxdata  MapInfos.rxdata  Scripts.rxdata  System.rxdata  Tilesets.rxdata  last_pickgrass_time.rxdata  last_time_in_map0.rxdata  last_travel_time.rxdata  pick_switch_map0.rxdata  pick_switch_map_other.rxdata  player_y_curr.rxdata  x.rxdata
RPG Maker related/Project1/Graphics/Characters/: 新建 Microsoft PowerPoint 演示文稿.pptx
STL practice/: STL practice.sln
STL practice/Debug/: STL practice.ilk
STL practice/STL practice/: 1.cpp  STL practice.vcxproj
STL practice/STL practice/Debug/: 1.obj.enc  STL practice.exe.recipe  vc142.idb
XINU projects/Function call stack project/xinu-fall2018 - Lab1 archieve/: CMakeLists.txt
XINU projects/Kernel stack and memory virtualization/xinu-fall2018 - Lab2 archieve/: CMakeLists.txt
XINU projects/Lab4/: ~$b4Answers.docx  ~WRL0005.tmp
XINU projects/Lab4/xinu-fall2018 - Lab4 archieve/: CMakeLists.txt
XINU projects/Lab4/xinu-fall2018 - Lab4 archieve/include/: process.h  prototypes.h  rms.h  xinu.h
XINU projects/Lab4/xinu-fall2018 - Lab4 archieve/system/: appR3test.c  do_shandler.c  getppid.c  initialize.c  intr.S  myfuncA.c  ready.c  resched.c  resume.c  rms_app.c  rms_create.c  send.c  userhandler.c
XINU projects/Lab5/: Lab5Soln.Z
XINU projects/Lab5/Lab5 archieve/: CMakeLists.txt
XINU projects/Process management/: Lab3Answers.docx
XINU projects/Process scheduling policies/: Lab4Answers.docx
XINU projects/paging -1/: Lab5Answers.docx
XINU projects/paging project/: CMakeLists.txt
XINU projects/paging project/paging project/xinu-fall2018-paging/compile/: .defs  version  xinu.map
XINU projects/paging project/paging project/xinu-fall2018-paging/include/: paging.h  process.h  prototypes.h  xinu.h
XINU projects/paging project/paging project/xinu-fall2018-paging/system/: README.txt  create.c  findfframe.c  hook.c  initialize.c  initialize_paging.c  kill.c  main.c  pfhandler.c  pfisr.S  ready.c  resched.c  test1.c  test2.c  vcreate.c  vfreemem.c  vgetmem.c  wait.c
hackerrank/Encryption by Shifting/: Encryption by Shifting.sln  Encryption by Shifting.vcxproj  源.cpp
hackerrank/Encryption by Shifting/Debug/: Encryption by Shifting.exe.recipe  Encryption by Shifting.ilk  Encryption by Shifting.vcxproj.FileListAbsolute.txt  vc142.idb
leetcode22/: 2.cpp  leetcode22.sln  leetcode22.vcxproj
leetcode22/Debug/: 2 add two numbers.exe.recipe  2 add two numbers.ilk  leetcode22.exe.recipe  leetcode22.ilk  leetcode22.vcxproj.FileListAbsolute.txt  vc142.idb
leetcode22/Debug/2 add tw.bf502084.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
leetcode22/Debug/leetcode22.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  leetcode22.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+104 files in other folders)
