# cmake_minimum_required(VERSION <specify CMake version here>)
project(paging_project C)

set(CMAKE_C_STANDARD 11)

include_directories("paging project/xinu-fall2018-paging/compile/uboot-tool")
include_directories("paging project/xinu-fall2018-paging/config")
include_directories("paging project/xinu-fall2018-paging/include")
include_directories("paging project/xinu-fall2018-paging/rdserver")
include_directories("paging project/xinu-fall2018-paging/system")

add_executable(paging_project
        "paging project/xinu-fall2018-paging/compile/uboot-tool/crc32.c"
        "paging project/xinu-fall2018-paging/compile/uboot-tool/image.h"
        "paging project/xinu-fall2018-paging/compile/uboot-tool/mkimage.c"
        "paging project/xinu-fall2018-paging/config/conf.c"
        "paging project/xinu-fall2018-paging/config/conf.h"
        "paging project/xinu-fall2018-paging/device/eth/colon2mac.c"
        "paging project/xinu-fall2018-paging/device/eth/ethcontrol.c"
        "paging project/xinu-fall2018-paging/device/eth/ethhandler.c"
        "paging project/xinu-fall2018-paging/device/eth/ethinit.c"
        "paging project/xinu-fall2018-paging/device/eth/ethmcast.c"
        "paging project/xinu-fall2018-paging/device/eth/ethread.c"
        "paging project/xinu-fall2018-paging/device/eth/ethwrite.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfdballoc.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfdbfree.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfflush.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfgetmode.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfiballoc.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfibclear.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfibget.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfibput.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflclose.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflcontrol.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflgetc.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflinit.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflputc.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflread.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflseek.c"
        "paging project/xinu-fall2018-paging/device/lfs/lflwrite.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfsckfmt.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfscreate.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfsetup.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfsinit.c"
        "paging project/xinu-fall2018-paging/device/lfs/lfsopen.c"
        "paging project/xinu-fall2018-paging/device/lfs/lftruncate.c"
        "paging project/xinu-fall2018-paging/device/nam/mount.c"
        "paging project/xinu-fall2018-paging/device/nam/naminit.c"
        "paging project/xinu-fall2018-paging/device/nam/nammap.c"
        "paging project/xinu-fall2018-paging/device/nam/namopen.c"
        "paging project/xinu-fall2018-paging/device/ram/ramclose.c"
        "paging project/xinu-fall2018-paging/device/ram/raminit.c"
        "paging project/xinu-fall2018-paging/device/ram/ramopen.c"
        "paging project/xinu-fall2018-paging/device/ram/ramread.c"
        "paging project/xinu-fall2018-paging/device/ram/ramwrite.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsbufalloc.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsclose.c"
        "paging project/xinu-fall2018-paging/device/rds/rdscomm.c"
        "paging project/xinu-fall2018-paging/device/rds/rdscontrol.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsinit.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsopen.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsprocess.c"
        "paging project/xinu-fall2018-paging/device/rds/rdsread.c"
        "paging project/xinu-fall2018-paging/device/rds/rdswrite.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflclose.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflgetc.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflinit.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflputc.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflread.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflseek.c"
        "paging project/xinu-fall2018-paging/device/rfs/rflwrite.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfscomm.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfscontrol.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfsgetmode.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfsinit.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfsndmsg.c"
        "paging project/xinu-fall2018-paging/device/rfs/rfsopen.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcclose.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmccmd.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcinit.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcinterrupt.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcopen.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcread.c"
        "paging project/xinu-fall2018-paging/device/sdmc/sdmcwrite.c"
        "paging project/xinu-fall2018-paging/device/tty/ttycontrol.c"
        "paging project/xinu-fall2018-paging/device/tty/ttygetc.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyhandle_in.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyhandle_out.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyhandler.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyinit.c"
        "paging project/xinu-fall2018-paging/device/tty/ttykickout.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyputc.c"
        "paging project/xinu-fall2018-paging/device/tty/ttyread.c"
        "paging project/xinu-fall2018-paging/device/tty/ttywrite.c"
        "paging project/xinu-fall2018-paging/include/arp.h"
        "paging project/xinu-fall2018-paging/include/bufpool.h"
        "paging project/xinu-fall2018-paging/include/clock.h"
        "paging project/xinu-fall2018-paging/include/ctype.h"
        "paging project/xinu-fall2018-paging/include/date.h"
        "paging project/xinu-fall2018-paging/include/debug.h"
        "paging project/xinu-fall2018-paging/include/delay.h"
        "paging project/xinu-fall2018-paging/include/device.h"
        "paging project/xinu-fall2018-paging/include/dhcp.h"
        "paging project/xinu-fall2018-paging/include/ether.h"
        "paging project/xinu-fall2018-paging/include/ethloop.h"
        "paging project/xinu-fall2018-paging/include/file.h"
        "paging project/xinu-fall2018-paging/include/flash.h"
        "paging project/xinu-fall2018-paging/include/gpio.h"
        "paging project/xinu-fall2018-paging/include/icmp.h"
        "paging project/xinu-fall2018-paging/include/icu.h"
        "paging project/xinu-fall2018-paging/include/interrupt.h"
        "paging project/xinu-fall2018-paging/include/ip.h"
        "paging project/xinu-fall2018-paging/include/kernel.h"
        "paging project/xinu-fall2018-paging/include/lfilesys.h"
        "paging project/xinu-fall2018-paging/include/limits.h"
        "paging project/xinu-fall2018-paging/include/mark.h"
        "paging project/xinu-fall2018-paging/include/memory.h"
        "paging project/xinu-fall2018-paging/include/multiboot.h"
        "paging project/xinu-fall2018-paging/include/name.h"
        "paging project/xinu-fall2018-paging/include/net.h"
        "paging project/xinu-fall2018-paging/include/page_server.h"
        "paging project/xinu-fall2018-paging/include/paging.h"
        "paging project/xinu-fall2018-paging/include/pci.h"
        "paging project/xinu-fall2018-paging/include/ports.h"
        "paging project/xinu-fall2018-paging/include/process.h"
        "paging project/xinu-fall2018-paging/include/prototypes.h"
        "paging project/xinu-fall2018-paging/include/pxe.h"
        "paging project/xinu-fall2018-paging/include/quark_eth.h"
        "paging project/xinu-fall2018-paging/include/quark_irq.h"
        "paging project/xinu-fall2018-paging/include/quark_pdat.h"
        "paging project/xinu-fall2018-paging/include/queue.h"
        "paging project/xinu-fall2018-paging/include/ramdisk.h"
        "paging project/xinu-fall2018-paging/include/rdisksys.h"
        "paging project/xinu-fall2018-paging/include/resched.h"
        "paging project/xinu-fall2018-paging/include/rfilesys.h"
        "paging project/xinu-fall2018-paging/include/sdmc.h"
        "paging project/xinu-fall2018-paging/include/semaphore.h"
        "paging project/xinu-fall2018-paging/include/shell.h"
        "paging project/xinu-fall2018-paging/include/shprototypes.h"
        "paging project/xinu-fall2018-paging/include/stdarg.h"
        "paging project/xinu-fall2018-paging/include/stddef.h"
        "paging project/xinu-fall2018-paging/include/stdio.h"
        "paging project/xinu-fall2018-paging/include/stdlib.h"
        "paging project/xinu-fall2018-paging/include/string.h"
        "paging project/xinu-fall2018-paging/include/testsuite.h"
        "paging project/xinu-fall2018-paging/include/tftp.h"
        "paging project/xinu-fall2018-paging/include/tty.h"
        "paging project/xinu-fall2018-paging/include/uart.h"
        "paging project/xinu-fall2018-paging/include/udp.h"
        "paging project/xinu-fall2018-paging/include/xinu.h"
        "paging project/xinu-fall2018-paging/lib/abs.c"
        "paging project/xinu-fall2018-paging/lib/atoi.c"
        "paging project/xinu-fall2018-paging/lib/atol.c"
        "paging project/xinu-fall2018-paging/lib/bzero.c"
        "paging project/xinu-fall2018-paging/lib/ctype_.c"
        "paging project/xinu-fall2018-paging/lib/doprnt.c"
        "paging project/xinu-fall2018-paging/lib/doscan.c"
        "paging project/xinu-fall2018-paging/lib/fdoprnt.c"
        "paging project/xinu-fall2018-paging/lib/fgetc.c"
        "paging project/xinu-fall2018-paging/lib/fgets.c"
        "paging project/xinu-fall2018-paging/lib/fprintf.c"
        "paging project/xinu-fall2018-paging/lib/fputc.c"
        "paging project/xinu-fall2018-paging/lib/fputs.c"
        "paging project/xinu-fall2018-paging/lib/fscanf.c"
        "paging project/xinu-fall2018-paging/lib/getchar.c"
        "paging project/xinu-fall2018-paging/lib/labs.c"
        "paging project/xinu-fall2018-paging/lib/memchr.c"
        "paging project/xinu-fall2018-paging/lib/memcmp.c"
        "paging project/xinu-fall2018-paging/lib/memcpy.c"
        "paging project/xinu-fall2018-paging/lib/memset.c"
        "paging project/xinu-fall2018-paging/lib/printf.c"
        "paging project/xinu-fall2018-paging/lib/putchar.c"
        "paging project/xinu-fall2018-paging/lib/qsort.c"
        "paging project/xinu-fall2018-paging/lib/rand.c"
        "paging project/xinu-fall2018-paging/lib/sprintf.c"
        "paging project/xinu-fall2018-paging/lib/sscanf.c"
        "paging project/xinu-fall2018-paging/lib/strchr.c"
        "paging project/xinu-fall2018-paging/lib/strcmp.c"
        "paging project/xinu-fall2018-paging/lib/strcpy.c"
        "paging project/xinu-fall2018-paging/lib/strlen.c"
        "paging project/xinu-fall2018-paging/lib/strncat.c"
        "paging project/xinu-fall2018-paging/lib/strncmp.c"
        "paging project/xinu-fall2018-paging/lib/strncpy.c"
        "paging project/xinu-fall2018-paging/lib/strnlen.c"
        "paging project/xinu-fall2018-paging/lib/strrchr.c"
        "paging project/xinu-fall2018-paging/lib/strstr.c"
        "paging project/xinu-fall2018-paging/net/arp.c"
        "paging project/xinu-fall2018-paging/net/arp_dump.c"
        "paging project/xinu-fall2018-paging/net/dhcp.c"
        "paging project/xinu-fall2018-paging/net/dhcp_dump.c"
        "paging project/xinu-fall2018-paging/net/dot2ip.c"
        "paging project/xinu-fall2018-paging/net/hexdump.c"
        "paging project/xinu-fall2018-paging/net/icmp.c"
        "paging project/xinu-fall2018-paging/net/ip.c"
        "paging project/xinu-fall2018-paging/net/net.c"
        "paging project/xinu-fall2018-paging/net/netstart.c"
        "paging project/xinu-fall2018-paging/net/pdump.c"
        "paging project/xinu-fall2018-paging/net/pxe.c"
        "paging project/xinu-fall2018-paging/net/tftp.c"
        "paging project/xinu-fall2018-paging/net/udp.c"
        "paging project/xinu-fall2018-paging/paging/allocate_bs.c"
        "paging project/xinu-fall2018-paging/paging/close_bs.c"
        "paging project/xinu-fall2018-paging/paging/deallocate_bs.c"
        "paging project/xinu-fall2018-paging/paging/get_bs.c"
        "paging project/xinu-fall2018-paging/paging/open_bs.c"
        "paging project/xinu-fall2018-paging/paging/psinit.c"
        "paging project/xinu-fall2018-paging/paging/read_bs.c"
        "paging project/xinu-fall2018-paging/paging/release_bs.c"
        "paging project/xinu-fall2018-paging/paging/write_bs.c"
        "paging project/xinu-fall2018-paging/rdserver/rdclose.c"
        "paging project/xinu-fall2018-paging/rdserver/rddelete.c"
        "paging project/xinu-fall2018-paging/rdserver/rdisksys.h"
        "paging project/xinu-fall2018-paging/rdserver/rdofile.c"
        "paging project/xinu-fall2018-paging/rdserver/rdopen.c"
        "paging project/xinu-fall2018-paging/rdserver/rdread.c"
        "paging project/xinu-fall2018-paging/rdserver/rdserver.c"
        "paging project/xinu-fall2018-paging/rdserver/rdserver.h"
        "paging project/xinu-fall2018-paging/rdserver/rdwrite.c"
        "paging project/xinu-fall2018-paging/rdserver/snderr.c"
        "paging project/xinu-fall2018-paging/rdserver/sndok.c"
        "paging project/xinu-fall2018-paging/rdserver/xinudefs.h"
        "paging project/xinu-fall2018-paging/shell/addargs.c"
        "paging project/xinu-fall2018-paging/shell/lexan.c"
        "paging project/xinu-fall2018-paging/shell/shell.c"
        "paging project/xinu-fall2018-paging/shell/xsh_argecho.c"
        "paging project/xinu-fall2018-paging/shell/xsh_arp.c"
        "paging project/xinu-fall2018-paging/shell/xsh_cat.c"
        "paging project/xinu-fall2018-paging/shell/xsh_clear.c"
        "paging project/xinu-fall2018-paging/shell/xsh_date.c"
        "paging project/xinu-fall2018-paging/shell/xsh_devdump.c"
        "paging project/xinu-fall2018-paging/shell/xsh_echo.c"
        "paging project/xinu-fall2018-paging/shell/xsh_exit.c"
        "paging project/xinu-fall2018-paging/shell/xsh_help.c"
        "paging project/xinu-fall2018-paging/shell/xsh_ipaddr.c"
        "paging project/xinu-fall2018-paging/shell/xsh_kill.c"
        "paging project/xinu-fall2018-paging/shell/xsh_memdump.c"
        "paging project/xinu-fall2018-paging/shell/xsh_memstat.c"
        "paging project/xinu-fall2018-paging/shell/xsh_ping.c"
        "paging project/xinu-fall2018-paging/shell/xsh_ps.c"
        "paging project/xinu-fall2018-paging/shell/xsh_rdstest.c"
        "paging project/xinu-fall2018-paging/shell/xsh_sleep.c"
        "paging project/xinu-fall2018-paging/shell/xsh_udpdump.c"
        "paging project/xinu-fall2018-paging/shell/xsh_udpecho.c"
        "paging project/xinu-fall2018-paging/shell/xsh_udpeserver.c"
        "paging project/xinu-fall2018-paging/shell/xsh_uptime.c"
        "paging project/xinu-fall2018-paging/system/ascdate.c"
        "paging project/xinu-fall2018-paging/system/bufinit.c"
        "paging project/xinu-fall2018-paging/system/chprio.c"
        "paging project/xinu-fall2018-paging/system/clkhandler.c"
        "paging project/xinu-fall2018-paging/system/clkinit.c"
        "paging project/xinu-fall2018-paging/system/close.c"
        "paging project/xinu-fall2018-paging/system/control.c"
        "paging project/xinu-fall2018-paging/system/create.c"
        "paging project/xinu-fall2018-paging/system/debug.c"
        "paging project/xinu-fall2018-paging/system/early_imr.c"
        "paging project/xinu-fall2018-paging/system/evec.c"
        "paging project/xinu-fall2018-paging/system/findfframe.c"
        "paging project/xinu-fall2018-paging/system/freebuf.c"
        "paging project/xinu-fall2018-paging/system/freemem.c"
        "paging project/xinu-fall2018-paging/system/getbuf.c"
        "paging project/xinu-fall2018-paging/system/getc.c"
        "paging project/xinu-fall2018-paging/system/getdev.c"
        "paging project/xinu-fall2018-paging/system/getitem.c"
        "paging project/xinu-fall2018-paging/system/getmem.c"
        "paging project/xinu-fall2018-paging/system/getpid.c"
        "paging project/xinu-fall2018-paging/system/getprio.c"
        "paging project/xinu-fall2018-paging/system/getstk.c"
        "paging project/xinu-fall2018-paging/system/gettime.c"
        "paging project/xinu-fall2018-paging/system/getutime.c"
        "paging project/xinu-fall2018-paging/system/hook.c"
        "paging project/xinu-fall2018-paging/system/init.c"
        "paging project/xinu-fall2018-paging/system/initialize.c"
        "paging project/xinu-fall2018-paging/system/initialize_paging.c"
        "paging project/xinu-fall2018-paging/system/insert.c"
        "paging project/xinu-fall2018-paging/system/insertd.c"
        "paging project/xinu-fall2018-paging/system/ioerr.c"
        "paging project/xinu-fall2018-paging/system/ionull.c"
        "paging project/xinu-fall2018-paging/system/kill.c"
        "paging project/xinu-fall2018-paging/system/kprintf.c"
        "paging project/xinu-fall2018-paging/system/main.c"
        "paging project/xinu-fall2018-paging/system/mark.c"
        "paging project/xinu-fall2018-paging/system/meminit.c"
        "paging project/xinu-fall2018-paging/system/mkbufpool.c"
        "paging project/xinu-fall2018-paging/system/newqueue.c"
        "paging project/xinu-fall2018-paging/system/open.c"
        "paging project/xinu-fall2018-paging/system/panic.c"
        "paging project/xinu-fall2018-paging/system/pci.c"
        "paging project/xinu-fall2018-paging/system/pfhandler.c"
        "paging project/xinu-fall2018-paging/system/platinit.c"
        "paging project/xinu-fall2018-paging/system/ptclear.c"
        "paging project/xinu-fall2018-paging/system/ptcount.c"
        "paging project/xinu-fall2018-paging/system/ptcreate.c"
        "paging project/xinu-fall2018-paging/system/ptdelete.c"
        "paging project/xinu-fall2018-paging/system/ptinit.c"
        "paging project/xinu-fall2018-paging/system/ptrecv.c"
        "paging project/xinu-fall2018-paging/system/ptreset.c"
        "paging project/xinu-fall2018-paging/system/ptsend.c"
        "paging project/xinu-fall2018-paging/system/putc.c"
        "paging project/xinu-fall2018-paging/system/quark_irq.c"
        "paging project/xinu-fall2018-paging/system/quark_pdat.c"
        "paging project/xinu-fall2018-paging/system/queue.c"
        "paging project/xinu-fall2018-paging/system/read.c"
        "paging project/xinu-fall2018-paging/system/ready.c"
        "paging project/xinu-fall2018-paging/system/receive.c"
        "paging project/xinu-fall2018-paging/system/recvclr.c"
        "paging project/xinu-fall2018-paging/system/recvtime.c"
        "paging project/xinu-fall2018-paging/system/resched.c"
        "paging project/xinu-fall2018-paging/system/resume.c"
        "paging project/xinu-fall2018-paging/system/seek.c"
        "paging project/xinu-fall2018-paging/system/semcount.c"
        "paging project/xinu-fall2018-paging/system/semcreate.c"
        "paging project/xinu-fall2018-paging/system/semdelete.c"
        "paging project/xinu-fall2018-paging/system/semreset.c"
        "paging project/xinu-fall2018-paging/system/send.c"
        "paging project/xinu-fall2018-paging/system/signal.c"
        "paging project/xinu-fall2018-paging/system/signaln.c"
        "paging project/xinu-fall2018-paging/system/sleep.c"
        "paging project/xinu-fall2018-paging/system/stacktrace.c"
        "paging project/xinu-fall2018-paging/system/suspend.c"
        "paging project/xinu-fall2018-paging/system/test1.c"
        "paging project/xinu-fall2018-paging/system/test2.c"
        "paging project/xinu-fall2018-paging/system/unsleep.c"
        "paging project/xinu-fall2018-paging/system/userret.c"
        "paging project/xinu-fall2018-paging/system/vcreate.c"
        "paging project/xinu-fall2018-paging/system/vfreemem.c"
        "paging project/xinu-fall2018-paging/system/vgetmem.c"
        "paging project/xinu-fall2018-paging/system/wait.c"
        "paging project/xinu-fall2018-paging/system/wakeup.c"
        "paging project/xinu-fall2018-paging/system/write.c"
        "paging project/xinu-fall2018-paging/system/xdone.c"
        "paging project/xinu-fall2018-paging/system/yield.c")
