# cmake_minimum_required(VERSION <specify CMake version here>)
project(lei_xinu_fall2018 C)

set(CMAKE_C_STANDARD 11)

include_directories(config)
include_directories(include)

add_executable(lei_xinu_fall2018
        config/conf.c
        config/conf.h
        config/lex.yy.c
        config/y.tab.c
        device/eth/ethcontrol.c
        device/eth/ethhandler.c
        device/eth/ethinit.c
        device/eth/ethmcast.c
        device/eth/ethread.c
        device/eth/ethwrite.c
        device/lfs/lfdballoc.c
        device/lfs/lfdbfree.c
        device/lfs/lfflush.c
        device/lfs/lfgetmode.c
        device/lfs/lfiballoc.c
        device/lfs/lfibclear.c
        device/lfs/lfibget.c
        device/lfs/lfibput.c
        device/lfs/lflclose.c
        device/lfs/lflcontrol.c
        device/lfs/lflgetc.c
        device/lfs/lflinit.c
        device/lfs/lflputc.c
        device/lfs/lflread.c
        device/lfs/lflseek.c
        device/lfs/lflwrite.c
        device/lfs/lfscheck.c
        device/lfs/lfsckfmt.c
        device/lfs/lfscreate.c
        device/lfs/lfsetup.c
        device/lfs/lfsinit.c
        device/lfs/lfsopen.c
        device/lfs/lftruncate.c
        device/nam/mount.c
        device/nam/naminit.c
        device/nam/nammap.c
        device/nam/namopen.c
        device/ram/ramclose.c
        device/ram/raminit.c
        device/ram/ramopen.c
        device/ram/ramread.c
        device/ram/ramwrite.c
        device/rds/rdsbufalloc.c
        device/rds/rdsclose.c
        device/rds/rdscomm.c
        device/rds/rdscontrol.c
        device/rds/rdsinit.c
        device/rds/rdsopen.c
        device/rds/rdsprocess.c
        device/rds/rdsread.c
        device/rds/rdswrite.c
        device/rfs/rflclose.c
        device/rfs/rflgetc.c
        device/rfs/rflinit.c
        device/rfs/rflputc.c
        device/rfs/rflread.c
        device/rfs/rflseek.c
        device/rfs/rflwrite.c
        device/rfs/rfscomm.c
        device/rfs/rfscontrol.c
        device/rfs/rfsgetmode.c
        device/rfs/rfsinit.c
        device/rfs/rfsndmsg.c
        device/rfs/rfsopen.c
        device/tty/ttycontrol.c
        device/tty/ttygetc.c
        device/tty/ttyhandle_in.c
        device/tty/ttyhandle_out.c
        device/tty/ttyhandler.c
        device/tty/ttyinit.c
        device/tty/ttykickout.c
        device/tty/ttyputc.c
        device/tty/ttyread.c
        device/tty/ttywrite.c
        include/arp.h
        include/bufpool.h
        include/clock.h
        include/conf.h
        include/ctype.h
        include/date.h
        include/debug.h
        include/delay.h
        include/device.h
        include/dhcp.h
        include/dns.h
        include/ether.h
        include/ethloop.h
        include/file.h
        include/flash.h
        include/icmp.h
        include/icu.h
        include/interrupt.h
        include/ip.h
        include/kernel.h
        include/lfilesys.h
        include/limits.h
        include/mark.h
        include/memory.h
        include/multiboot.h
        include/name.h
        include/net.h
        include/pci.h
        include/ports.h
        include/process.h
        include/prototypes.h
        include/pxe.h
        include/quark_eth.h
        include/quark_irq.h
        include/quark_pdat.h
        include/queue.h
        include/ramdisk.h
        include/rdisksys.h
        include/resched.h
        include/rfilesys.h
        include/rms.h
        include/sdmc.h
        include/semaphore.h
        include/shell.h
        include/shprototypes.h
        include/stdarg.h
        include/stddef.h
        include/stdio.h
        include/stdlib.h
        include/string.h
        include/testsuite.h
        include/tftp.h
        include/tty.h
        include/uart.h
        include/udp.h
        include/xinu.h
        include/xsignal.h
        lib/abs.c
        lib/atoi.c
        lib/atol.c
        lib/bzero.c
        lib/ctype_.c
        lib/doprnt.c
        lib/doscan.c
        lib/fdoprnt.c
        lib/fgetc.c
        lib/fgets.c
        lib/fprintf.c
        lib/fputc.c
        lib/fputs.c
        lib/fscanf.c
        lib/getchar.c
        lib/labs.c
        lib/memchr.c
        lib/memcmp.c
        lib/memcpy.c
        lib/memset.c
        lib/printf.c
        lib/putchar.c
        lib/qsort.c
        lib/rand.c
        lib/sprintf.c
        lib/sscanf.c
        lib/strchr.c
        lib/strcmp.c
        lib/strcpy.c
        lib/strlen.c
        lib/strncat.c
        lib/strncmp.c
        lib/strncpy.c
        lib/strnlen.c
        lib/strrchr.c
        lib/strstr.c
        net/arp.c
        net/arp_dump.c
        net/dhcp.c
        net/dhcp_dump.c
        net/dns.c
        net/dot2ip.c
        net/hexdump.c
        net/icmp.c
        net/ip.c
        net/net.c
        net/pdump.c
        net/pxe.c
        net/tftp.c
        net/udp.c
        shell/addargs.c
        shell/lexan.c
        shell/shell.c
        shell/xsh_argecho.c
        shell/xsh_arp.c
        shell/xsh_cat.c
        shell/xsh_clear.c
        shell/xsh_date.c
        shell/xsh_devdump.c
        shell/xsh_echo.c
        shell/xsh_exit.c
        shell/xsh_help.c
        shell/xsh_kill.c
        shell/xsh_memdump.c
        shell/xsh_memstat.c
        shell/xsh_netinfo.c
        shell/xsh_ping.c
        shell/xsh_ps.c
        shell/xsh_rdstest.c
        shell/xsh_sleep.c
        shell/xsh_udpdump.c
        shell/xsh_udpecho.c
        shell/xsh_udpserver.c
        shell/xsh_uptime.c
        system/appR3test.c
        system/ascdate.c
        system/bufinit.c
        system/chprio.c
        system/clkhandler.c
        system/clkinit.c
        system/close.c
        system/conf.c
        system/control.c
        system/create.c
        system/debug.c
        system/do_shandler.c
        system/early_imr.c
        system/evec.c
        system/exit.c
        system/freebuf.c
        system/freemem.c
        system/getbuf.c
        system/getc.c
        system/getdev.c
        system/getitem.c
        system/getmem.c
        system/getpid.c
        system/getppid.c
        system/getprio.c
        system/getstk.c
        system/getticks.c
        system/gettime.c
        system/getutime.c
        system/igetpid.c
        system/init.c
        system/initialize.c
        system/insert.c
        system/insertd.c
        system/ioerr.c
        system/ionull.c
        system/kill.c
        system/kprintf.c
        system/Lab2_test_fun_1.c
        system/Lab4_3_debug.c
        system/Lab4_4_conc_1.c
        system/Lab4_4_conc_2.c
        system/Lab4_4_XCPU.c
        system/main.c
        system/malware.c
        system/malwareB.c
        system/mark.c
        system/meminit.c
        system/mkbufpool.c
        system/myfuncA.c
        system/myProgA.c
        system/myrcv.c
        system/newqueue.c
        system/open.c
        system/panic.c
        system/pci.c
        system/platinit.c
        system/printsegaddress.c
        system/ptclear.c
        system/ptcount.c
        system/ptcreate.c
        system/ptdelete.c
        system/ptinit.c
        system/ptrecv.c
        system/ptreset.c
        system/ptsend.c
        system/putc.c
        system/quark_irq.c
        system/quark_pdat.c
        system/queue.c
        system/read.c
        system/ready.c
        system/receive.c
        system/recvclr.c
        system/recvtime.c
        system/reghandler.c
        system/resched.c
        system/resume.c
        system/revbyteorder_inline.c
        system/revbyteorderc.c
        system/rms_app.c
        system/rms_create.c
        system/rms_debug.c
        system/seek.c
        system/semcount.c
        system/semcreate.c
        system/semdelete.c
        system/semreset.c
        system/send.c
        system/signal.c
        system/signaln.c
        system/signalreg.c
        system/sleep.c
        system/stacktrace.c
        system/suspend.c
        system/unsleep.c
        system/useralarm.c
        system/userhandler.c
        system/userret.c
        system/wait.c
        system/wakeup.c
        system/welcome.c
        system/write.c
        system/xalarm.c
        system/xdone.c
        system/xuptime.c
        system/yield.c)
